# OpenMP-Tim-Mattson

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
apps/: CMakeLists.txt  linked.c  mandel.c  pi_mc.c  prodCons.c  tutorial.cpp
assets/OMP_exercises/solutions/: random_par.c
libs/computepi/: CMakeLists.txt  computepi.cpp  computepi.h
libs/helloworld/: CMakeLists.txt  helloworld.cpp  helloworld.h
libs/random/: CMakeLists.txt  random.c  random.h
